@@ -1,4 +1,4 @@
 # -*- coding: utf-8 -*-
 
 
-__version__ = "1.4.1.dev1"
+__version__ = "1.5.0"
